@@ -1,3 +1,10 @@
+2009-12-19  Daniel Macks  <dmacks@netspace.org>
+
+	* dpkg-base-files.info.in, postinst.in: debugging output to see
+	how we are called
+	* preinst.in, postinst.in, prerm.in, postrm.in: link Debian docs
+	for parameters
+
 2009-12-18  Daniel Macks  <dmacks@netspace.org>
 
 	* dpkg-base-files.info.in: require dpkg that will use the scripts
